--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -91,8 +91,12 @@ h3 {
 
       p {
         color: var(--darkgreen);
-        font-size: 10px;
+        font-size: 11px;
         font-weight: 600;
+
+        .regNo {
+          font-size: 13px;
+        }
       }
 
       .info-item {
@@ -368,6 +372,7 @@ h3 {
         padding-bottom: 20px;
       }
     }
+
     @media (max-width: 400px) {
       grid-template-columns: 1fr;
 
@@ -1103,4 +1108,66 @@ h3 {
     background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent 60%);
     z-index: 0;
   }
+}
+
+.addressSec {
+  display: flex;
+  margin: 50px 0px 60px 0px;
+
+  .officeAddress {
+    padding: 40px 60px;
+    background-color: #e2eecc;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    @media(min-width:767px){
+    min-height: 271px;
+
+    }
+    @media(max-width:767px){
+    padding: 40px 20px;
+
+    }
+    // align-items: center;
+    // justify-content: center;
+p{
+      font-size: 14px;
+}
+    h3 {
+      font-size: 18px;
+    }
+  }
+  @media(max-width:767px){
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
+.contact .pline {
+  padding-top: 20px;
+  margin-top: 0px;
+}
+
+.abtPage{
+  .banner-sec h3{
+    font-size: 46px;
+       text-transform: capitalize;
+    font-weight: 400;
+  }
+}
+
+
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+.fadeInUp-animation {
+  animation: 1.5s fadeInUp;
 }
