--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -678,17 +678,19 @@ Global Transfers Area CSS
 .agri-dhan-vikas {
     padding: 60px 0px 100px 0px;
     background-color: #f7f8f9 !important;
-      @media(max-width:575px) {
-                padding-bottom: 50px;
-         }
+
+    @media(max-width:575px) {
+        padding-bottom: 50px;
+    }
 
     .section-title {
         color: #222222 !important;
         margin-bottom: 10px;
         font-size: 46px;
-         @media(max-width:575px) {
-                font-size: 34px;
-         }
+
+        @media(max-width:575px) {
+            font-size: 34px;
+        }
     }
 
     .subtitle {
@@ -939,9 +941,10 @@ Global Transfers Area CSS
         font-size: 46px;
         font-weight: 500;
         color: #222222;
-          @media(max-width:575px) {
-                font-size: 34px;
-         }
+
+        @media(max-width:575px) {
+            font-size: 34px;
+        }
     }
 
     .vidimg {
@@ -1029,9 +1032,10 @@ Global Transfers Area CSS
         color: #222222 !important;
         font-weight: 500;
         font-size: 46px;
-          @media(max-width:575px) {
-                font-size: 34px;
-         }
+
+        @media(max-width:575px) {
+            font-size: 34px;
+        }
     }
 }
 
@@ -1094,10 +1098,84 @@ Global Transfers Area CSS
     }
 }
 
-.footer .footer-item .footer-title{
+.footer .footer-item .footer-title {
     padding: 10px 0 10px 0;
     margin-bottom: 10px;
 }
-.footerAddress{
-    max-width:98%
+
+.footerAddress {
+    max-width: 98%
+}
+
+.projectInnerPage {
+    .dark_bg {
+        background-color: #e2eecc;
+        padding: 40px 0px;
+    }
+
+    .hrline {
+        background-color: #55c06a;
+        margin: 40px 0px;
+        margin-bottom: 70px;
+    }
+
+
+
+    .visionMissionImg {
+        img {
+            height: 250px;
+        }
+    }
+
+    .top_left_img {
+        img {
+            height: 390px;
+            width: 90%;
+            object-fit: cover;
+        }
+    }
+
+    h1 {
+        font-size: 36px;
+        margin-bottom: 20px;
+    }
+
+    .reduce_width {
+        max-width: 90%;
+    }
+
+    .green_bg {
+        background-color: #27b14b;
+        padding: 30px 0px;
+        text-align: center;
+
+        p {
+            color: #fff;
+            font-size: 16px;
+        }
+
+        .grid_sec {
+            padding-top: 30px;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+
+            .singlegrid {
+                text-align: center;
+
+                .iconwrapper {
+                    img {
+                        width: 50px;
+                        height: 50px;
+                        margin: 0 auto;
+                    }
+                }
+
+                p {
+                    padding-top: 10px;
+                    margin: 0 auto;
+                    line-height: 20px;
+                }
+            }
+        }
+    }
 }
