--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -620,7 +620,7 @@ h3 {
 
       img {
         width: 100%;
-        max-height: 300px;
+            max-height: 200px;;
         object-fit: contain;
         margin-bottom: 10px;
       }
