--- a/public/website/css/ss-custom.css
+++ b/public/website/css/ss-custom.css
@@ -384,8 +384,9 @@ Global Transfers Area CSS
 
 .product-section .container h2,
 .gallery .container h2 {
-  color: #7fc55d !important;
-  font-size: 54px !important;
+  font-size: 46px;
+  font-weight: 500;
+  color: #222222;
 }
 @media (max-width: 600px) {
   .product-section .container h2,
