--- a/public/website/css/ss-custom.css
+++ b/public/website/css/ss-custom.css
@@ -1300,4 +1300,8 @@ Global Transfers Area CSS
   .mob-padding-sp {
     padding-top: 80px !important;
   }
+}
+.pro_inner_wrapper .membership-section {
+  background-color: #dfe0df;
+  color: #000;
 }/*# sourceMappingURL=ss-custom.css.map */
