--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -1507,3 +1507,10 @@ Global Transfers Area CSS
     padding-top: 80px !important;
 }
 }
+
+.pro_inner_wrapper{
+    .membership-section{
+            background-color: #dfe0df;
+            color: #000;
+    }
+}
