--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -1303,10 +1303,16 @@ Global Transfers Area CSS
 
     .subhead {
         background-color: #e6e7e9;
+          @media(max-width:575px){
+            font-size: 11px !important;
+        }
     }
 
     td {
         background-color: #f2f3f4;
+        @media(max-width:575px){
+            font-size: 12px !important;
+        }
     }
 
     .green_row {
@@ -1564,4 +1570,10 @@ Global Transfers Area CSS
     td, th{
         text-align: center;
     }
+  @media(max-width:575px){
+       
+    .condition {
+    margin-bottom: 50px !important;
+}
+  }
 }
