--- a/public/website/css/ss-custom.scss
+++ b/public/website/css/ss-custom.scss
@@ -1574,6 +1574,7 @@ Global Transfers Area CSS
        
     .condition {
     margin-bottom: 50px !important;
+        margin-top: -10px !important;
 }
   }
 }
