--- a/public/website/css/custom.scss
+++ b/public/website/css/custom.scss
@@ -142,7 +142,6 @@ h3 {
         padding-left: 0;
         padding-right: 0;
 
-        .navbar-right,
         li {
           margin-right: 0;
 
@@ -152,6 +151,9 @@ h3 {
 
           a {
             color: var(--gray) !important;
+            // &:hover{
+            //   color: #fff !important;
+            // }
           }
         }
       }
@@ -452,7 +454,8 @@ h3 {
           }
         }
       }
-      &:focus{
+
+      &:focus {
         text-decoration: none;
       }
     }
@@ -623,7 +626,8 @@ h3 {
 
       img {
         width: 100%;
-            max-height: 200px;;
+        max-height: 200px;
+        ;
         object-fit: contain;
         margin-bottom: 10px;
       }
@@ -1123,24 +1127,29 @@ h3 {
     text-align: center;
     display: flex;
     flex-direction: column;
-    @media(min-width:767px){
-    min-height: 271px;
+
+    @media(min-width:767px) {
+      min-height: 271px;
 
     }
-    @media(max-width:767px){
-    padding: 40px 20px;
+
+    @media(max-width:767px) {
+      padding: 40px 20px;
 
     }
+
     // align-items: center;
     // justify-content: center;
-p{
+    p {
       font-size: 14px;
-}
+    }
+
     h3 {
       font-size: 18px;
     }
   }
-  @media(max-width:767px){
+
+  @media(max-width:767px) {
     flex-direction: column;
     gap: 20px;
   }
@@ -1151,10 +1160,10 @@ p{
   margin-top: 0px;
 }
 
-.abtPage{
-  .banner-sec h3{
+.abtPage {
+  .banner-sec h3 {
     font-size: 46px;
-       text-transform: capitalize;
+    text-transform: capitalize;
     font-weight: 400;
   }
 }
@@ -1165,6 +1174,7 @@ p{
     transform: translateY(100%);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0%);
     opacity: 1;
@@ -1173,4 +1183,104 @@ p{
 
 .fadeInUp-animation {
   animation: 1.5s fadeInUp;
+}
+
+.header-1 .navbar-main .dropdown-menu>li a:hover {
+  background-color: #26b24b;
+  color: #ffffff !important;
+}
+
+.career-page {
+
+  .top-sec {
+    padding: 100px 0px;
+    background-color: #092e390d;
+  }
+
+  .career-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    @media(max-width:575px) {
+      grid-template-columns: repeat(1, 1fr);
+
+    }
+
+    gap: 30px;
+
+    .single-grid {
+      border: 1px solid #81c45c;
+      padding: 20px;
+      border-radius: 10px;
+
+      .icon-wrapper {
+        width: 50px;
+        height: 50px;
+      }
+
+      h3,
+      p {
+        margin: 0;
+      }
+
+      h3 {
+        padding: 10px 0px;
+      }
+
+      p {
+        font-size: 16px;
+      }
+
+      .btn-apply {
+        background-color: #092e39;
+        padding: 8px 30px;
+        border-radius: 5px;
+        margin-top: 20px;
+
+        &:hover {
+          color: #e2eecc;
+        }
+      }
+    }
+  }
+
+  .career_form {
+    padding-top: 60px;
+
+    .w-60 {
+      width: 60%;
+      margin: 0 auto;
+
+      @media(max-width:575px) {
+        width: 100%;
+      }
+    }
+
+
+    h2 {
+      padding-bottom: 30px;
+    }
+
+    .form-grid {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 10px 30px;
+
+      .btn-primary {
+        background-color: #092e39 !important;
+      }
+    }
+
+    .form-control {
+      height: 50px;
+
+      &:focus {
+        box-shadow: none;
+      }
+    }
+  }
+}
+
+#careerForm {
+    scroll-margin-top: 300px; /* smooth spacing after scroll */
 }
